--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ header:
   overlay_color: "#5e616c"
   overlay_image: "images/homepage-banner-1.jpg"
   caption:
-excerpt: "All I'm saying is inside, I had the element of surprise."
+excerpt: "Today we cross the Rubicon. There’s no going back."
 ---
