--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 author_profile: true
 header:
   overlay_color: "#5e616c"
-  overlay_image: "images/homepage-banner-1.jpg"
+  overlay_image: "images/test_1920.jpeg"
   caption:
 excerpt: "Today we cross the Rubicon. There’s no going back."
 ---
